tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/noPixelBW.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:e7709177a679d28d4d74f09b404d2bfd1f1443cabc4487c9dc17a799062fc538
size 64868
